🐛 fix(HandleInertiaRequests.php): add 'user_permissions' key to the 'auth' object in the shared data to include user permissions in the response ✨ feat(app.css): add CSS classes for fade transition animation ✨ feat(permission-check.js): add helper function 'can' to check if a user has a specific permission 🚀 feat(Header.vue): add text-start class to the button for better alignment 🚀 feat(RoleAndPermissionManage.vue): add conditional rendering for add and delete buttons based on user permissions 🚀 feat(UserManage.vue): add conditional rendering for edit, enable, disable, and delete buttons based on user permissions

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -61,13 +61,13 @@
     background: #555;
   }
 
-  .fade-enter-active,
-  .fade-leave-active {
-    transition: opacity 0.2s ease;
-  }
+}
+.fadetransition-enter-active,
+.fadetransition-leave-active {
+  transition: opacity 0.2s ease;
+}
 
-  .fade-enter-from,
-  .fade-leave-to {
-    opacity: 0;
-  }
+.fadetransition-enter-from,
+.fadetransition-leave-to {
+  opacity: 0;
 }
